--- a/project.properties
+++ b/project.properties
@@ -13,6 +13,6 @@
 # Project target.
 target=android-19
 
-android.library.reference.1= libs/slidelibrary
+android.library.reference.1=../slidelibrary
 
 
